# AI-Chatbot-Agent

./: .env.example  README.md  main.py  main_api.py  pyproject.toml  streamlit_chat.py
cob_demo_agent/prompts/: booking_prompt.txt  handoff_prompt.txt  rag_prompt.txt  router_prompt.txt
cob_demo_agent/routes/: chat.py
cob_demo_agent/schemas/: chat.py
cob_demo_agent/sre/: graph_service.py  langgraph_app.py
cob_demo_agent/sre/booking_agent/: tools.py
cob_demo_agent/sre/log_manager/: logger.py
cob_demo_agent/sre/rag_agent/: models.py  prompts.py  vectorstore.py
cob_demo_agent/utils/: env.py  errors.py  paths.py
data/: appointments.db  cob_kb.json
data/chroma_langchain_db/: chroma.sqlite3
notebooks/: 00_create_sql_data.ipynb  01_data_loading_and_cleaning.ipynb  Build_a_custom_SQL_agent.ipynb  RAG_agent.ipynb  appointments.db  custom_RAG_agent.ipynb  kb_paragraphs.json
notebooks/chroma_langchain_db/: chroma.sqlite3
