[project]
name = "ai-chatbot-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "langchain[google-genai]>=1.2.0",
    "langchain-community>=0.4.1",
    "langgraph>=1.0.5",
    "langchain-text-splitters>=1.1.0",
    "langchain-google-genai>=4.1.2",
    "langchain-chroma>=1.1.0",
    "fastapi>=0.127.1",
    "uvicorn>=0.40.0",
    "streamlit>=1.52.2",
]
